新增通讯录排序功能

--- a/Contacks/Contacks/Contacks.vcxproj
+++ b/Contacks/Contacks/Contacks.vcxproj
@@ -65,7 +65,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="contacts.c" />
+    <ClCompile Include="contact.c" />
     <ClCompile Include="test.c" />
   </ItemGroup>
   <ItemGroup>
