--- a/Contacks/Contacks/Contacks.vcxproj.filters
+++ b/Contacks/Contacks/Contacks.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="test.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="contacts.c">
+    <ClCompile Include="contact.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
